迁移到新的GitHub仓库地址
- 更新远程仓库地址：https://github.com/xkcyy/ai-config.git
- 更新默认分支：main (GitHub 标准）
- 更新所有配置文件中的仓库引用
- 更新README.md中的所有示例和文档
- 更新package.json仓库信息
- 保持完整的Node.js/TypeScript功能

🔄 迁移完成：
- 源码仓库：https://github.com/xkcyy/ai-config.git
- 默认分支：main
- npm安装：npm install -g https://github.com/xkcyy/ai-config.git
- 配置同步：从GitHub main分支同步配置

✅ 功能验证：
- ai-config --version (1.0.0)
- ai-config sync --dry-run --force --branch main
- 完整的GitHub CI/CD支持

--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/xkcyy/ai-config.git"
+    "url": "https://github.com/xkcyy/ai-config.git"
   },
-  "homepage": "https://gitee.com/xkcyy/ai-config#readme",
+  "homepage": "https://github.com/xkcyy/ai-config#readme",
   "bugs": {
-    "url": "https://gitee.com/xkcyy/ai-config/issues"
+    "url": "https://github.com/xkcyy/ai-config/issues"
   },
   "files": [
     "dist/",
