--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "build": "tsc",
     "dev": "ts-node src/cli.ts",
     "start": "node dist/cli.js",
-    "test": "node dist/test.js"
+    "test": "node dist/test.js",
+    "postinstall": "npm run build"
   },
   "keywords": ["ai", "ide", "config", "claude", "code-cursor", "sync", "git"],
   "author": "ai-coder-extends maintainers",
   "license": "MIT",
   "dependencies": {
     "commander": "^11.1.0",
-    "simple-git": "^3.20.0"
-  },
-  "devDependencies": {
+    "simple-git": "^3.20.0",
     "@types/node": "^20.10.0",
     "typescript": "^5.3.0",
     "ts-node": "^10.9.1"
