--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ai-config",
   "version": "1.0.0",
   "description": "Sync and push AI IDE configs for Claude / Code Cursor",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "bin": {
-    "ai-config": "./cli.js"
+    "ai-config": "./src/cli.ts"
   },
   "scripts": {
     "build": "tsc",
