--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sync and push AI IDE configs for Claude / Code Cursor",
   "main": "dist/index.js",
   "bin": {
-    "ai-config": "./cli.js"
+    "ai-config": "cli.js"
   },
   "scripts": {
     "build": "tsc",
@@ -36,7 +36,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/xkcyy/ai-config.git"
+    "url": "git+https://github.com/xkcyy/ai-config.git"
   },
   "homepage": "https://github.com/xkcyy/ai-config#readme",
   "bugs": {
