Convert TypeScript to JavaScript for direct GitHub installation

--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "ai-config",
   "version": "1.0.1",
   "description": "Sync and push AI IDE configs for Claude / Code Cursor",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "bin": {
     "ai-config": "cli.js"
   },
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/cli.ts",
-    "start": "node dist/cli.js",
-    "test": "node dist/test.js",
-    "prepack": "npm run build"
+    "start": "node src/cli.js"
   },
   "keywords": [
     "ai",
@@ -26,10 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^11.1.0",
-    "simple-git": "^3.20.0",
-    "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "ts-node": "^10.9.1"
+    "simple-git": "^3.20.0"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -44,13 +37,11 @@
   },
   "files": [
     "src/",
-    "dist/",
     "README.md",
     "LICENSE",
     "package.json",
     "ai-config",
     "remote-config/ai/",
-    "tsconfig.json",
     "cli.js"
   ]
 }
