--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-config",
   "version": "1.0.1",
-  "description": "Sync and push AI IDE configs for Claude / Code Cursor",
+  "description": "Sync and push AI IDE configs for Claude / Code Cursor / AI / Trae / Specify",
   "main": "src/index.js",
   "bin": {
     "ai-config": "cli.js"
@@ -15,6 +15,8 @@
     "config",
     "claude",
     "code-cursor",
+    "trae",
+    "specify",
     "sync",
     "git"
   ],
